$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- modify build scripts as not to clobber the host system (as far as
  possible - see TODO). Removing /usr/m0n0wall/build82 should now
  leave things clean enough for another build. This is done mostly by
  undoing patches to ports after they've been built, using a separate
  working and DB directory for ports (-> env variable) and making a
  copy of the kernel source tree before patching/compiling. Also,
  autoconf has a handy wrapper that can be used to choose the version
  without removing links.

- automatically tag image version with subversion revision if '%'
  character found in "version" file

- add copies of various source code packages (PHP etc.) to repository,
  as some of them are obsolete versions, and who knows when they're
  gone from their official web locations.

- unify syslogd.c patches

- ndp/arp page fixup

- hide "ipfw*" and "bridge*" virtual interfaces from assign interfaces list

- add kernel patch for dummynet on IPv6 packets

- add ndp support to arp diagnostic page (ipv6 arp equivilent). silence rc 
  if deleteing syslinux symlinks that maynot exist. Add ndp_get_mac_by_ip() 
  and get_mac_by_ip()

- fix rc for syslinux symlinks, fix setkey to /sbin, remove rc script from build
  directory, add some build script exit messages
  
- installing from cdrom will try from /dev/acd0 then /dev/cd0.  Install works
  via remote ISO mapping on hp servers now.
  
- Add Manuel Kaspers ip6_input.c patch for ipsec6, add ipv6 support to ipsec tunnels
  set sysctl for net.enc.in.ipsec_filter_mask in rc

- fix syslinux not doing ttys in chroot properly (fixs console) , update todo

- update todo

- syslinux changes: microfs used for mfsroot, then chroot the FAT32 mount
  (experimental, symlinks won't work on FAT32 with freebsd needs fixing etc)
  
- fixup buildscripts and pfkey patch (whitespaces yet again)
